--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "json-server db.json -m ./node_modules/json-server-auth",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
